refactor: reduce value of controllers (#13)
* refactor: reduce amount of controllers

* refactor: change openAPI
